--- a/app/src/main/res/layout/ui_player.xml
+++ b/app/src/main/res/layout/ui_player.xml
@@ -138,7 +138,7 @@
         android:id="@+id/cl_up_player"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <LinearLayout
             android:id="@+id/ll_up_player"
@@ -215,7 +215,7 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="460dp"
+                android:layout_height="400dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/ll_status">
@@ -223,9 +223,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_list_song"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-
-                    />
+                    android:layout_height="match_parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -390,4 +388,3 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
