--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:sothree="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/a"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/nero_7"
-    tools:context=".activities.mainActivity.MainActivity">
+    sothree:umanoPanelHeight="68dp"
+    sothree:umanoShadowHeight="4dp"
+    tools:context=".MainActivity">
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bnv_main"
@@ -24,27 +25,23 @@
 
     <com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:sothree="http://schemas.android.com/apk/res-auto"
         android:id="@+id/sliding_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="@dimen/_0dp"
+        android:layout_height="@dimen/_0dp"
         android:gravity="bottom"
-        sothree:layout_constraintBottom_toBottomOf="parent"
+        sothree:layout_constraintBottom_toTopOf="@id/bnv_main"
         sothree:layout_constraintEnd_toEndOf="parent"
         sothree:layout_constraintStart_toStartOf="parent"
         sothree:layout_constraintTop_toTopOf="parent"
-        sothree:umanoPanelHeight="@dimen/_180dp"
+        sothree:umanoPanelHeight="@dimen/_100dp"
         sothree:umanoShadowHeight="@dimen/_4dp">
 
         <include
             android:id="@+id/up_slide"
-            layout="@layout/up_sliding_layout">
-
-        </include>
+            layout="@layout/up_sliding_layout" />
 
         <include
             android:id="@+id/down_slide"
-            layout="@layout/down_sliding_layout">
-
-        </include>
+            layout="@layout/down_sliding_layout" />
 
     </com.sothree.slidinguppanel.SlidingUpPanelLayout>
 
