--- a/app/src/main/res/layout/fragment_playlists.xml
+++ b/app/src/main/res/layout/fragment_playlists.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/nero_7"
-    tools:context=".main.ui.playLists.PlayListsFragment">
+    tools:context=".dashbord.ui.playLists.PlayListsFragment">
 
     <ProgressBar
         android:id="@+id/pb_playlist"
