--- a/app/src/main/res/layout/song_list_row.xml
+++ b/app/src/main/res/layout/song_list_row.xml
@@ -8,7 +8,7 @@
         android:id="@+id/cv_song"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_100dp"
-        app:cardBackgroundColor="@color/nero_6"
+        app:cardBackgroundColor="@color/nero_7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -35,23 +35,19 @@
                 android:textSize="@dimen/_16sp"
                 app:layout_constraintBottom_toTopOf="@id/song_duration"
                 app:layout_constraintStart_toEndOf="@id/img_song"
-                app:layout_constraintTop_toTopOf="parent"
-
-                />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/dash"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_4dp"
-                android:text="-"
+                android:text="@string/dash"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_16sp"
                 app:layout_constraintBottom_toTopOf="@id/song_duration"
                 app:layout_constraintStart_toEndOf="@id/singer_name"
-                app:layout_constraintTop_toTopOf="parent"
-
-                />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/song_name"
@@ -62,9 +58,7 @@
                 android:textSize="@dimen/_16sp"
                 app:layout_constraintBottom_toTopOf="@id/song_duration"
                 app:layout_constraintStart_toEndOf="@id/dash"
-                app:layout_constraintTop_toTopOf="parent"
-
-                />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/song_duration"
@@ -75,9 +69,16 @@
                 android:textSize="@dimen/_14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/img_song"
-                app:layout_constraintTop_toBottomOf="@id/singer_name"
+                app:layout_constraintTop_toBottomOf="@id/singer_name" />
 
-                />
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/img_eq"
+                android:layout_width="@dimen/_60dp"
+                android:layout_height="@dimen/_60dp"
+                android:layout_marginEnd="@dimen/_8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
