--- a/app/src/main/res/layout/up_sliding_layout.xml
+++ b/app/src/main/res/layout/up_sliding_layout.xml
@@ -25,7 +25,7 @@
                 android:textColor="@color/white"
                 android:textSize="@dimen/_18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/search"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
