--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/playListsFragment"
-        android:name="com.omid.musicplayer.main.ui.playLists.PlayListsFragment"
+        android:name="com.omid.musicplayer.dashbord.ui.playLists.PlayListsFragment"
         android:label="fragment_playlists"
         tools:layout="@layout/fragment_playlists" >
         <action
@@ -17,7 +17,7 @@
 
     <fragment
         android:id="@+id/albumsFragment"
-        android:name="com.omid.musicplayer.main.ui.albums.AlbumsFragment"
+        android:name="com.omid.musicplayer.dashbord.ui.albums.AlbumsFragment"
         android:label="fragment_albums"
         tools:layout="@layout/fragment_albums" >
         <action
@@ -27,13 +27,13 @@
 
     <fragment
         android:id="@+id/artistsFragment"
-        android:name="com.omid.musicplayer.main.ui.artists.ArtistsFragment"
+        android:name="com.omid.musicplayer.dashbord.ui.artists.ArtistsFragment"
         android:label="fragment_artists"
         tools:layout="@layout/fragment_artists" />
 
     <fragment
         android:id="@+id/genresFragment"
-        android:name="com.omid.musicplayer.main.ui.genres.GenresFragment"
+        android:name="com.omid.musicplayer.dashbord.ui.genres.GenresFragment"
         android:label="fragment_genres"
         tools:layout="@layout/fragment_genres" >
         <action
@@ -55,7 +55,7 @@
 
     <fragment
         android:id="@+id/mainFragment"
-        android:name="com.omid.musicplayer.main.ui.mainFragment.MainFragment"
+        android:name="com.omid.musicplayer.dashbord.ui.mainFragment.MainFragment"
         android:label="fragment_main"
         tools:layout="@layout/fragment_main" />
     <fragment
