--- a/app/src/main/res/layout/fragment_songs_list_by_cat_id.xml
+++ b/app/src/main/res/layout/fragment_songs_list_by_cat_id.xml
@@ -56,4 +56,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_song_list_by_cat_id" />
 
+    <ProgressBar
+        android:id="@+id/pb"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_song_list_by_cat_id" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
