--- a/app/src/main/res/layout/fragment_albums_by_id_list.xml
+++ b/app/src/main/res/layout/fragment_albums_by_id_list.xml
@@ -56,4 +56,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/albums_by_id_toolbar" />
 
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:id="@+id/pb_album_by_id_list"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/albums_by_id_toolbar" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
