--- a/app/src/main/res/layout/ui_player.xml
+++ b/app/src/main/res/layout/ui_player.xml
@@ -4,13 +4,14 @@
     android:id="@+id/main_ui_player"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/nero_6">
+    android:background="@color/nero_7">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_down_Player"
         android:layout_width="@dimen/_0dp"
         android:layout_height="@dimen/_100dp"
         android:visibility="gone"
+        android:background="@color/nero_6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -101,6 +102,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/_70dp"
         android:visibility="gone"
+        android:background="@color/nero_6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -180,6 +182,7 @@
         android:id="@+id/cl_status"
         android:layout_width="@dimen/_0dp"
         android:layout_height="@dimen/_140dp"
+        android:background="@color/nero_6"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
