Completing and Developing

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,5 +18,5 @@
     <color name="nero_5">#1C1C1C</color>
     <color name="radicalRed">#FC1967</color>
     <color name="torchRed">#fc1934</color>
-
+    <color name="BlueWhale">#1d2d49</color>
 </resources>
