--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,6 +14,7 @@
     <dimen name="_15sp">15sp</dimen>
     <dimen name="_16dp">16dp</dimen>
     <dimen name="_16sp">16sp</dimen>
+    <dimen name="_17sp">17sp</dimen>
     <dimen name="_18dp">18dp</dimen>
     <dimen name="_18sp">18sp</dimen>
     <dimen name="_20dp">20dp</dimen>
