--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -17,174 +17,221 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/main_scroll"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/srl"
+        android:layout_width="@dimen/_0dp"
+        android:visibility="visible"
+        android:layout_height="@dimen/_0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <androidx.core.widget.NestedScrollView
+            android:id="@+id/main_scroll"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="@dimen/_4dp">
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cv_banner"
+                    android:layout_width="@dimen/_0dp"
+                    android:layout_height="@dimen/_230dp"
+                    android:layout_margin="@dimen/_8dp"
+                    app:cardCornerRadius="@dimen/_16dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <androidx.viewpager.widget.ViewPager
+                            android:id="@+id/vp_banner"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <com.rd.PageIndicatorView
+                            android:id="@+id/pageIndicatorView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="@dimen/_2dp"
+                            android:padding="@dimen/_12dp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:piv_animationType="scale"
+                            app:piv_dynamicCount="true"
+                            app:piv_interactiveAnimation="true"
+                            app:piv_radius="@dimen/_8dp"
+                            app:piv_selectedColor="@color/torchRed"
+                            app:piv_unselectedColor="@color/white"
+                            app:piv_viewPager="@id/vp_banner" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                </androidx.cardview.widget.CardView>
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/title_newSongs"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/_16dp"
+                    android:gravity="center"
+                    android:text="@string/new_Songs"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_15sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/cv_banner" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/more_newSongs"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/_16dp"
+                    android:gravity="center"
+                    android:text="@string/more"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_15sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/cv_banner" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_newSongs"
+                    android:layout_width="@dimen/_0dp"
+                    android:layout_height="@dimen/_180dp"
+                    android:layout_margin="@dimen/_16dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/title_newSongs" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/title_special_Songs"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/_16dp"
+                    android:gravity="center"
+                    android:text="@string/special"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_15sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/rv_newSongs" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/more_special_Songs"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/_16dp"
+                    android:gravity="center"
+                    android:text="@string/more"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_15sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/rv_newSongs" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_special_Songs"
+                    android:layout_width="@dimen/_0dp"
+                    android:layout_height="@dimen/_180dp"
+                    android:layout_margin="@dimen/_16dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/title_special_Songs" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/title_latestSongs"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/_16dp"
+                    android:gravity="center"
+                    android:text="@string/latest_Songs"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_15sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/rv_special_Songs" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_latestSongs"
+                    android:layout_width="@dimen/_0dp"
+                    android:layout_height="@dimen/_180dp"
+                    android:layout_margin="@dimen/_16dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/title_latestSongs" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/title_recent_artist"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/_16dp"
+                    android:gravity="center"
+                    android:text="@string/recent_artist"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_15sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/rv_latestSongs" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_recent_artist"
+                    android:layout_width="@dimen/_0dp"
+                    android:layout_height="@dimen/_200dp"
+                    android:layout_margin="@dimen/_16dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/title_recent_artist" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.core.widget.NestedScrollView>
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/live_no_connection"
         android:layout_width="@dimen/_0dp"
         android:layout_height="@dimen/_0dp"
-        android:visibility="visible"
+        android:background="@color/white"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="@dimen/_4dp">
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/live_pic_no_connection"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/no_connection"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cv_banner"
-                android:layout_width="@dimen/_0dp"
-                android:layout_height="@dimen/_230dp"
-                android:layout_margin="@dimen/_8dp"
-                app:cardCornerRadius="@dimen/_16dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/live_txt_en"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_30dp"
+            android:text="@string/no_internet_connection"
+            android:textColor="@color/BlueWhale"
+            android:textSize="@dimen/_17sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/live_pic_no_connection" />
 
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <androidx.viewpager.widget.ViewPager
-                        android:id="@+id/vp_banner"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <com.rd.PageIndicatorView
-                        android:id="@+id/pageIndicatorView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/_2dp"
-                        android:padding="@dimen/_12dp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:piv_animationType="scale"
-                        app:piv_dynamicCount="true"
-                        app:piv_interactiveAnimation="true"
-                        app:piv_radius="@dimen/_8dp"
-                        app:piv_selectedColor="@color/torchRed"
-                        app:piv_unselectedColor="@color/white"
-                        app:piv_viewPager="@id/vp_banner" />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/title_newSongs"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_16dp"
-                android:gravity="center"
-                android:text="@string/new_Songs"
-                android:textColor="@color/white"
-                android:textSize="@dimen/_15sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/cv_banner" />
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/more_newSongs"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_16dp"
-                android:gravity="center"
-                android:text="@string/more"
-                android:textColor="@color/white"
-                android:textSize="@dimen/_15sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/cv_banner" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_newSongs"
-                android:layout_width="@dimen/_0dp"
-                android:layout_height="@dimen/_180dp"
-                android:layout_margin="@dimen/_16dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/title_newSongs" />
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/title_special_Songs"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_16dp"
-                android:gravity="center"
-                android:text="@string/special"
-                android:textColor="@color/white"
-                android:textSize="@dimen/_15sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/rv_newSongs" />
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/more_special_Songs"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_16dp"
-                android:gravity="center"
-                android:text="@string/more"
-                android:textColor="@color/white"
-                android:textSize="@dimen/_15sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/rv_newSongs" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_special_Songs"
-                android:layout_width="@dimen/_0dp"
-                android:layout_height="@dimen/_180dp"
-                android:layout_margin="@dimen/_16dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/title_special_Songs" />
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/title_latestSongs"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_16dp"
-                android:gravity="center"
-                android:text="@string/latest_Songs"
-                android:textColor="@color/white"
-                android:textSize="@dimen/_15sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/rv_special_Songs" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_latestSongs"
-                android:layout_width="@dimen/_0dp"
-                android:layout_height="@dimen/_180dp"
-                android:layout_margin="@dimen/_16dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/title_latestSongs" />
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/title_recent_artist"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_16dp"
-                android:gravity="center"
-                android:text="@string/recent_artist"
-                android:textColor="@color/white"
-                android:textSize="@dimen/_15sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/rv_latestSongs" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_recent_artist"
-                android:layout_width="@dimen/_0dp"
-                android:layout_height="@dimen/_200dp"
-                android:layout_margin="@dimen/_16dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/title_recent_artist" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </androidx.core.widget.NestedScrollView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
