--- a/app/src/main/res/layout/fragment_song_list_by_artist_name.xml
+++ b/app/src/main/res/layout/fragment_song_list_by_artist_name.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/shark"
+    android:background="@color/nero_7"
     tools:context=".fragments.songListByArtistNameFragment.SongListByArtistNameFragment">
 
     <androidx.appcompat.widget.Toolbar
